# project-root

./: package-lock.json
backend/: .env  Cargo.toml  package-lock.json
backend/migrations/: 20241024172712_create_users.down.sql
backend/prisma/: schema.prisma
backend/src/: database.rs  main.rs
frontend/: .env  .gitignore  index.html  package-lock.json  package.json
frontend/src/: App.css  App.tsx  main.tsx
frontend/src/components/ui/: Footer.tsx  NavBar.tsx
frontend/src/components/ui/dashboard/: UserList.tsx  dashheader.tsx  dashnav.tsx  followerchart.tsx  metrics.tsx  recent.tsx
frontend/src/components/ui/home/: CTA.tsx  ProductServices.tsx  SectionOne.tsx  hero.tsx
frontend/src/pages/Home/: CTA.tsx  Footer.css  Footer.tsx  NavBar.css  NavBar.tsx  ProductServices.css  ProductServices.tsx  hero.css  hero.tsx  home.tsx
frontend/src/pages/Pages/: CTA.css  CTA.tsx  Footer.tsx  NavBar.tsx  SectionOne.css  SectionOne.tsx  home.tsx
frontend/src/pages/dashboard/: dashboard.css  dashboard.tsx
frontend/src/pages/lesser/about/: about.css  about.tsx
frontend/src/pages/lesser/contact/: contact.css  contact.tsx
frontend/src/pages/lesser/pricing/: pricing.css  pricing.tsx
frontend/src/pages/login/: login.css  login.tsx
frontend/src/pages/signup/: signup.css  signup.tsx
frontend/src/styles/: NavBar.css
frontend/src/styles/dashboard/: dashheader.css  dashnav.css  followerchart.css  metrics.css  recent.css
frontend/src/styles/home/: CTA.css  ProductServices.css  hero.css
frontend/src/types/: api.ts
