[package]
name = "backend"
version = "0.1.0"
edition = "2021"


[dependencies]
typeshare = "1.0.3"
axum = "0.5.16"
diesel = { version = "2.0", features = ["postgres"] }  # Adjust version as necessary
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.68"
tokio = { version = "1.0", features = ["full"] }
tower-http = { version = "0.3.4", features = ["cors"] }
