[package]
name = "backend"
version = "0.1.0"
edition = "2021"


[dependencies]
axum = "0.6"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-native-tls"] }
dotenvy = "0.15.0"
hyper = "0.14"  # Add this line
serde = { version = "1.0.213", features = ["derive"] }
serde_json = "1.0.132"
tower-http = { version = "0.6.1", features = ["cors"] }


