[package]
name = "backend"
version = "0.1.0"
edition = "2021"


[dependencies]
axum = "0.6.0"
tokio = { version = "1.0", features = ["full"] }
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-native-tls"] }
dotenvy = "0.15.0"
hyper = "0.14"  
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.68"
tower-http = { version = "0.3.4", features = ["cors"] }

